storage/innobase/os/os0file.cc
@@ -399,9 +399,8 @@ os_file_set_atomic_writes(
 
 	if (ioctl(file, DFS_IOCTL_ATOMIC_WRITE_SET, &atomic_option)) {
 
-		fprintf(stderr, "InnoDB: Error: trying to enable atomic writes on "
-		"file %s on non-supported platform! Please restart with "
-			"innodb_use_atomic_writes disabled.\n", name);
+		fprintf(stderr, "InnoDB: Warning:Trying to enable atomic writes on "
+			"file %s on non-supported platform!\n", name);
 		os_file_handle_error_no_exit(name, "ioctl", FALSE, __FILE__, __LINE__);
 		return(FALSE);
 	}
@@ -409,8 +408,7 @@ os_file_set_atomic_writes(
 	return(TRUE);
 #else
 	fprintf(stderr, "InnoDB: Error: trying to enable atomic writes on "
-		"non-supported platform! Please restart with "
-		"innodb_use_atomic_writes disabled.\n");
+		"file %s on non-supported platform!\n", name);
 	return(FALSE);
 #endif
 }
@@ -561,6 +559,19 @@ os_file_get_last_error_low(
 				"InnoDB: because of either a thread exit"
 				" or an application request.\n"
 				"InnoDB: Retry attempt is made.\n");
+		} else if (err == ECANCELED || err == ENOTTY) {
+			if (strerror(err) != NULL) {
+				fprintf(stderr,
+					"InnoDB: Error number %d"
+					" means '%s'.\n",
+					err, strerror(err));
+			}
+
+			if(srv_use_atomic_writes) {
+				fprintf(stderr,
+					"InnoDB: Error trying to enable atomic writes on "
+					"non-supported destination!\n");
+			}
 		} else {
 			fprintf(stderr,
 				"InnoDB: Some operating system error numbers"
@@ -620,11 +631,14 @@ os_file_get_last_error_low(
 			fprintf(stderr,
 				"InnoDB: The error means mysqld does not have"
 				" the access rights to\n"
-				"InnoDECANCELEDB: the directory.\n");
-		} else if (err == ECANCELED) {
-			fprintf(stderr,
-				"InnoDB: Operation canceled (%d):%s\n",
-				err, strerror(err));
+				"InnoDB: the directory.\n");
+		} else if (err == ECANCELED || err == ENOTTY) {
+			if (strerror(err) != NULL) {
+				fprintf(stderr,
+					"InnoDB: Error number %d"
+					" means '%s'.\n",
+					err, strerror(err));
+			}
 
 			if(srv_use_atomic_writes) {
 				fprintf(stderr,
@@ -663,6 +677,7 @@ os_file_get_last_error_low(
 	case EISDIR:
 		return(OS_FILE_PATH_ERROR);
 	case ECANCELED:
+	case ENOTTY:
                 return(OS_FILE_OPERATION_NOT_SUPPORTED);
 	case EAGAIN:
 		if (srv_use_native_aio) {
@@ -1521,13 +1536,21 @@ os_file_create_simple_no_error_handling_func(
 			  attributes,
 			  NULL);		// No template file
 
+	/* If we have proper file handle and atomic writes should be used,
+	try to set atomic writes and if that fails when creating a new
+	table, produce a error. If atomic writes are used on existing
+	file, ignore error and use traditional writes for that file */
 	if (file != INVALID_HANDLE_VALUE
 	    && (awrites == ATOMIC_WRITES_ON ||
 		(srv_use_atomic_writes && awrites == ATOMIC_WRITES_DEFAULT))
 	    && !os_file_set_atomic_writes(name, file)) {
-			 CloseHandle(file);
+		if (create_mode == OS_FILE_CREATE) {
+			fprintf(stderr, "InnoDB: Error: Can't create file using atomic writes\n");
+			CloseHandle(file);
+			os_file_delete_if_exists_func(name);
 			*success = FALSE;
 			file = INVALID_HANDLE_VALUE;
+		}
 	}
 
 	*success = (file != INVALID_HANDLE_VALUE);
@@ -1590,13 +1613,21 @@ os_file_create_simple_no_error_handling_func(
 	}
 #endif /* USE_FILE_LOCK */
 
+	/* If we have proper file handle and atomic writes should be used,
+	try to set atomic writes and if that fails when creating a new
+	table, produce a error. If atomic writes are used on existing
+	file, ignore error and use traditional writes for that file */
 	if (file != -1
 	    && (awrites == ATOMIC_WRITES_ON ||
 		(srv_use_atomic_writes && awrites == ATOMIC_WRITES_DEFAULT))
 	    && !os_file_set_atomic_writes(name, file)) {
-		*success = FALSE;
-		close(file);
-		file = -1;
+		if (create_mode == OS_FILE_CREATE) {
+			fprintf(stderr, "InnoDB: Error: Can't create file using atomic writes\n");
+			close(file);
+			os_file_delete_if_exists_func(name);
+			*success = FALSE;
+			file = -1;
+		}
 	}
 
 
@@ -1836,13 +1867,21 @@ os_file_create_func(
 
 	} while (retry);
 
+	/* If we have proper file handle and atomic writes should be used,
+	try to set atomic writes and if that fails when creating a new
+	table, produce a error. If atomic writes are used on existing
+	file, ignore error and use traditional writes for that file */
 	if (file != INVALID_HANDLE_VALUE
 	    && (awrites == ATOMIC_WRITES_ON ||
 		(srv_use_atomic_writes && awrites == ATOMIC_WRITES_DEFAULT))
 	    && !os_file_set_atomic_writes(name, file)) {
-			 CloseHandle(file);
+		if (create_mode == OS_FILE_CREATE) {
+			fprintf(stderr, "InnoDB: Error: Can't create file using atomic writes\n");
+			CloseHandle(file);
+			os_file_delete_if_exists_func(name);
 			*success = FALSE;
 			file = INVALID_HANDLE_VALUE;
+		}
 	}
 #else /* __WIN__ */
 	int		create_flag;
@@ -1972,13 +2011,21 @@ os_file_create_func(
 	}
 #endif /* USE_FILE_LOCK */
 
+	/* If we have proper file handle and atomic writes should be used,
+	try to set atomic writes and if that fails when creating a new
+	table, produce a error. If atomic writes are used on existing
+	file, ignore error and use traditional writes for that file */
 	if (file != -1
 	    && (awrites == ATOMIC_WRITES_ON ||
 		(srv_use_atomic_writes && awrites == ATOMIC_WRITES_DEFAULT))
 	    && !os_file_set_atomic_writes(name, file)) {
-		*success = FALSE;
-		close(file);
-		file = -1;
+		if (create_mode == OS_FILE_CREATE) {
+			fprintf(stderr, "InnoDB: Error: Can't create file using atomic writes\n");
+			close(file);
+			os_file_delete_if_exists_func(name);
+			*success = FALSE;
+			file = -1;
+		}
 	}
 #endif /* __WIN__ */
 
