storage/xtradb/fil/fil0fil.cc
@@ -746,7 +746,7 @@ fil_node_open_file(
 	ulint		space_id;
 	ulint		flags=0;
 	ulint		page_size;
-	ibool           atomic_writes=FALSE;
+	ulint           atomic_writes=0;
 
 	ut_ad(mutex_own(&(system->mutex)));
 	ut_a(node->n_pending == 0);
@@ -3288,6 +3288,8 @@ fil_create_link_file(
 		} else if (error == OS_FILE_DISK_FULL) {
 			err = DB_OUT_OF_FILE_SPACE;
 
+		} else if (error == OS_FILE_OPERATION_NOT_SUPPORTED) {
+			err = DB_UNSUPPORTED;
 		} else {
 			err = DB_ERROR;
 		}
@@ -3448,7 +3450,7 @@ fil_create_new_single_table_tablespace(
 	/* TRUE if a table is created with CREATE TEMPORARY TABLE */
 	bool		is_temp = !!(flags2 & DICT_TF2_TEMPORARY);
 	bool		has_data_dir = FSP_FLAGS_HAS_DATA_DIR(flags);
-	bool		atomic_writes = FSP_FLAGS_GET_ATOMIC_WRITES(flags);
+	ulint		atomic_writes = FSP_FLAGS_GET_ATOMIC_WRITES(flags);
 
 	ut_a(space_id > 0);
 	ut_ad(!srv_read_only_mode);
@@ -3506,6 +3508,11 @@ fil_create_new_single_table_tablespace(
 				path, path);
 
 			err = DB_TABLESPACE_EXISTS;
+			goto error_exit_3;
+		}
+
+		if (error == OS_FILE_OPERATION_NOT_SUPPORTED) {
+			err = DB_UNSUPPORTED;
 			goto error_exit_3;
 		}
 
@@ -3735,7 +3742,7 @@ fil_open_single_table_tablespace(
 	fsp_open_info	remote;
 	ulint		tablespaces_found = 0;
 	ulint		valid_tablespaces_found = 0;
-	ibool           atomic_writes = FALSE;
+	ulint           atomic_writes = 0;
 
 #ifdef UNIV_SYNC_DEBUG
 	ut_ad(!fix_dict || rw_lock_own(&dict_operation_lock, RW_LOCK_EX));
@@ -3745,6 +3752,8 @@ fil_open_single_table_tablespace(
 	if (!fsp_flags_is_valid(flags)) {
 		return(DB_CORRUPTION);
 	}
+
+	atomic_writes = fsp_flags_get_atomic_writes(flags);
 
 	/* If the tablespace was relocated, we do not
 	compare the DATA_DIR flag */
